Changed adaptation from 1230px to 1380px

--- a/css/style.css
+++ b/css/style.css
@@ -592,6 +592,10 @@ button:focus {
   color: #453D2B;
 }
 
+.footer__social-box {
+  display: flex;
+}
+
 .footer__social {
   display: flex;
   flex-direction: column;
