Adapted footer for 1230px in `media.scss`

--- a/css/media.css
+++ b/css/media.css
@@ -348,6 +348,9 @@
   .post__subtitle {
     margin-bottom: 20px !important;
   }
+  .footer__app {
+    width: 100px !important;
+  }
 }
 
 @media (max-height: 580px) {
