--- a/css/media.scss
+++ b/css/media.scss
@@ -450,6 +450,12 @@
   .post__subtitle {
     margin-bottom: 20px !important;
   }
+
+  .footer__app {
+    width: 100px !important;
+  }
+
+  ;
 }
 
 @media (max-height: 580px) {
