--- a/css/media.css
+++ b/css/media.css
@@ -300,6 +300,9 @@
   .main {
     padding-bottom: 100px !important;
   }
+  .post__box--third {
+    margin: 0 auto !important;
+  }
 }
 
 @media (max-width: 1230px) {
