--- a/css/media.scss
+++ b/css/media.scss
@@ -390,6 +390,10 @@
   .main {
     padding-bottom: 100px !important;
   }
+
+  .post__box--third {
+    margin: 0 auto !important;
+  }
 }
 
 @media (max-width: 1230px) {
