--- a/css/media.css
+++ b/css/media.css
@@ -365,6 +365,9 @@
     bottom: 251px !important;
     right: 80px !important;
   }
+  .post__box--third {
+    margin: 0 auto !important;
+  }
 }
 
 @media (max-width: 1170px) {
@@ -407,6 +410,9 @@
   }
   .post__box-services__price {
     font-size: 20px !important;
+  }
+  .post__main-img {
+    width: 400px !important;
   }
 }
 
