--- a/css/style.css
+++ b/css/style.css
@@ -1364,6 +1364,85 @@ button:focus {
   transform: translateY(-50%);
 }
 
+.post__graph-currency-country-kz {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: #453D2B;
+  position: relative;
+  padding-right: 50px;
+}
+
+.post__graph-currency-country-kz::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/ico/kz.svg);
+  background-size: contain;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.post__graph-currency-country-ru {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: #453D2B;
+  position: relative;
+  padding-right: 50px;
+}
+
+.post__graph-currency-country-ru::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/ico/ru.svg);
+  background-size: contain;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.post__graph-currency-country-us {
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 32px;
+  text-transform: uppercase;
+  color: #453D2B;
+  position: relative;
+  padding-right: 50px;
+}
+
+.post__graph-currency-country-us::after {
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  background-image: url(../images/ico/us.svg);
+  background-size: contain;
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.post__graph-box-mini__box {
+  display: none;
+}
+
 .post__currency-box {
   background: #EEEFEC;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
