Fixed bugs during adaptation

--- a/css/media.css
+++ b/css/media.css
@@ -76,11 +76,11 @@
     font-size: 15px !important;
   }
   .cursor--yellow {
-    bottom: 168px !important;
+    bottom: 188px !important;
     right: 48px !important;
   }
   .cursor--brown {
-    bottom: 130px !important;
+    bottom: 149px !important;
     right: 45px !important;
   }
   .intro__img img {
@@ -281,17 +281,17 @@
   }
   .cursor {
     right: 28px !important;
-    bottom: 156px !important;
+    bottom: 174px !important;
   }
   .post__transfer {
     margin-right: 25px !important;
   }
   .cursor--yellow {
-    bottom: 303px !important;
+    bottom: 322px !important;
     right: 30px !important;
   }
   .cursor--brown {
-    bottom: 270px !important;
+    bottom: 290px !important;
     right: 27px !important;
   }
   .post__subtitle {
@@ -329,7 +329,7 @@
     width: 15px !important;
     height: 15px !important;
     right: 37px !important;
-    bottom: 137px !important;
+    bottom: 158px !important;
   }
   .post__box--50 {
     margin: 0 !important;
@@ -358,11 +358,11 @@
     right: 84px !important;
   }
   .cursor--brown {
-    bottom: 222px !important;
+    bottom: 241px !important;
     right: 80px !important;
   }
   .cursor--yellow {
-    bottom: 251px !important;
+    bottom: 271px !important;
     right: 80px !important;
   }
   .post__box--third {
@@ -381,11 +381,11 @@
     right: 37px !important;
   }
   .cursor--yellow {
-    bottom: 251px !important;
+    bottom: 271px !important;
     right: 32px !important;
   }
   .cursor--brown {
-    bottom: 222px !important;
+    bottom: 242px !important;
     right: 33px !important;
   }
   .footer__logo {
@@ -439,8 +439,8 @@
     width: 285px !important;
   }
   .cursor {
-    bottom: 215px !important;
-    right: 18px !important;
+    bottom: 234px !important;
+    right: 35px !important;
   }
   .post__graph-graph-img {
     width: 472px !important;
@@ -452,10 +452,10 @@
     font-size: 14px !important;
   }
   .cursor--yellow {
-    bottom: 330px !important;
+    bottom: 347px !important;
   }
   .cursor--brown {
-    bottom: 300px !important;
+    bottom: 319px !important;
   }
   .post__box-services__item {
     max-width: 350px !important;
@@ -466,11 +466,17 @@
 }
 
 @media (max-width: 1080px) {
+  .cursor {
+    bottom: 234px !important;
+    right: 18px !important;
+  }
   .cursor--yellow {
     right: 15px !important;
+    bottom: 318px !important;
   }
   .cursor--brown {
     right: 15px !important;
+    bottom: 288px !important;
   }
   .post__currency-country-kz,
   .post__currency-country-ru,
