--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,44 @@ button:focus {
   margin: 0 auto;
 }
 
+.burger__box {
+  width: 30px;
+  height: 30px;
+  display: block;
+  margin: 0 10px;
+  cursor: pointer;
+  display: none;
+}
+
+.burger {
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #453D2B;
+  position: relative;
+  margin-top: 13px;
+}
+
+.burger::before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #453D2B;
+  position: absolute;
+  bottom: 8px;
+}
+
+.burger::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 3px;
+  background-color: #453D2B;
+  position: absolute;
+  top: 8px;
+}
+
 .modal {
   position: fixed;
   z-index: 1000;
