--- a/css/style-second.css
+++ b/css/style-second.css
@@ -35,6 +35,17 @@
   margin-bottom: 0 !important;
 }
 
+.btn-sign--fourth {
+  font-family: 'Bellota Text', cursive;
+  font-weight: 700 !important;
+  font-size: 20px !important;
+  line-height: 19px !important;
+  padding: 10px 50px !important;
+  width: auto !important;
+  height: auto !important;
+  margin: 0 auto !important;
+}
+
 .post__sign-content--second {
   width: 100% !important;
 }
