--- a/css/style-second.scss
+++ b/css/style-second.scss
@@ -43,6 +43,17 @@ $gray: #EEEFED;
   margin-bottom: 0 !important;
 }
 
+.btn-sign--fourth {
+  font-family: 'Bellota Text', cursive;
+  font-weight: 700 !important;
+  font-size: 20px !important;
+  line-height: 19px !important;
+  padding: 10px 50px !important;
+  width: auto !important;
+  height: auto !important;
+  margin: 0 auto !important;
+}
+
 .post__sign-content--second {
   width: 100% !important;
 }
