--- a/css/style.css
+++ b/css/style.css
@@ -1291,6 +1291,34 @@ button:focus {
   max-height: 60px;
 }
 
+.sideMenu__burger {
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 90;
+}
+
+.sideMenu__burger-inner {
+  background-color: #EEEFEC;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100%;
+  padding: 85px 0 25px;
+}
+
+.sideMenu__burger-title {
+  font-family: 'Bellota Text', cursive;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 23px;
+  color: #453D2B;
+  padding: 25px 16px;
+}
+
 .post__currency-value {
   font-weight: 700;
   font-size: 25px;
