--- a/css/media.css
+++ b/css/media.css
@@ -832,6 +832,16 @@
   }
 }
 
+@media (max-width: 830px) {
+  .post__currency-box__inner {
+    flex-direction: column;
+  }
+  .post__currency-box {
+    width: 40% !important;
+    margin-bottom: 10px !important;
+  }
+}
+
 @media (max-height: 730px) {
   .sideMenu__burger-inner {
     padding: 65px 0 25px !important;
