--- a/css/style.css
+++ b/css/style.css
@@ -2199,4 +2199,13 @@ button:focus {
   justify-content: center;
   padding: 10px 0 30px;
 }
+
+.footer__top-mini,
+.footer__nav-mini,
+.footer__social-mini,
+.footer__apps-mini,
+.footer__contacts-mini,
+.footer__links-mini {
+  display: none;
+}
 /*# sourceMappingURL=style.css.map */
