--- a/css/style.scss
+++ b/css/style.scss
@@ -2239,3 +2239,12 @@ button:focus {
   justify-content: center;
   padding: 10px 0 30px;
 }
+
+.footer__top-mini,
+.footer__nav-mini,
+.footer__social-mini,
+.footer__apps-mini,
+.footer__contacts-mini,
+.footer__links-mini {
+  display: none;
+}
