--- a/css/style.css
+++ b/css/style.css
@@ -1115,6 +1115,7 @@ button:focus {
   width: 20px;
   height: 20px;
   background-image: url(../images/ico/share.svg);
+  background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
   right: 0;
