--- a/css/style.scss
+++ b/css/style.scss
@@ -1141,6 +1141,7 @@ button:focus {
     width: 20px;
     height: 20px;
     background-image: url(../images/ico/share.svg);
+    background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
     right: 0;
