--- a/css/media.css
+++ b/css/media.css
@@ -991,11 +991,32 @@
     width: 15px !important;
     height: 15px !important;
   }
-  .post__box--third {
+  .post__box--second {
     margin-top: 0 !important;
   }
   .sign-input {
     font-size: 15px !important;
+  }
+}
+
+@media (max-width: 680px) {
+  .intro__slogan {
+    font-size: 15px !important;
+    line-height: 19px !important;
+  }
+  .intro__text {
+    font-size: 12px !important;
+    line-height: 15px !important;
+  }
+  .intro__btn {
+    font-size: 15px !important;
+    padding: 0px 45px 9px !important;
+    width: 180px !important;
+    height: 35px !important;
+    line-height: 35px !important;
+  }
+  .intro__img img {
+    width: 300px !important;
   }
 }
 
