--- a/css/media.css
+++ b/css/media.css
@@ -1131,6 +1131,38 @@
   .main--second {
     padding: 95px 0 30px !important;
   }
+  .header__login {
+    font-size: 15px !important;
+    line-height: 19px !important;
+    margin-right: 0 !important;
+  }
+  .header__search {
+    margin: 0 10px !important;
+  }
+  .header__search img {
+    width: 15px !important;
+    height: 15px !important;
+  }
+  .lang-switcher,
+  .lang-en,
+  .search__box {
+    font-size: 15px !important;
+    line-height: 19px !important;
+  }
+  .lang-switcher::after {
+    top: -4px !important;
+  }
+  .header__logo img {
+    width: 100px !important;
+  }
+  .header__search-box {
+    right: 0 !important;
+    bottom: -55px !important;
+  }
+  .search__box {
+    width: 192px !important;
+    padding: 10px 15px !important;
+  }
 }
 
 @media (max-height: 730px) {
