--- a/css/media.scss
+++ b/css/media.scss
@@ -1459,6 +1459,26 @@
     width: 192px !important;
     padding: 10px 15px !important;
   }
+
+  .footer__logo-img {
+    width: 150px !important;
+  }
+
+  .footer__copy {
+    font-size: 12px !important;
+    line-height: 15px !important;
+    width: 130px !important;
+  }
+
+  .footer__nav-link {
+    font-size: 12px !important;
+    line-height: 15px !important;
+  }
+
+  .footer__contacts-title {
+    font-size: 20px !important;
+    line-height: 25px !important;
+  }
 }
 
 @media (max-height: 730px) {
