--- a/css/media.scss
+++ b/css/media.scss
@@ -1503,7 +1503,7 @@
 
 @media (max-height: 615px) {
   .sideMenu__burger-title {
-    padding: 20px 16px 10px !important;
+    padding: 0px 16px 10px !important;
   }
 }
 
@@ -1546,9 +1546,11 @@
   }
 
   .btn-sign--fourth {
-    font-size: 18px !important;
-    line-height: 18px !important;
-    padding: 6px 25px !important;
+    font-size: 11px !important;
+    line-height: 15px !important;
+    padding: 0px 25px !important;
+    width: 120px !important;
+    height: 30px !important;
   }
 }
 
@@ -1559,10 +1561,16 @@
   }
 
   .sideMenu__burger-text {
-    font-size: 15px !important;
+    font-size: 12px !important;
   }
 
   .sideMenu__burger-ico__img {
-    width: 25px !important;
+    width: 20px !important;
+  }
+}
+
+@media (max-height: 430px) {
+  .sideMenu__burger-title {
+    padding: 0px 16px 5px !important;
   }
 }
