--- a/css/media.scss
+++ b/css/media.scss
@@ -1479,6 +1479,18 @@
     font-size: 20px !important;
     line-height: 25px !important;
   }
+
+  .post__transfer {
+    padding: 30px 10px 40px !important;
+  }
+
+  .post__transfer-input {
+    width: 100% !important;
+  }
+
+  .post__transfer-input--50px {
+    width: 50px !important;
+  }
 }
 
 @media (max-height: 730px) {
