--- a/css/media.scss
+++ b/css/media.scss
@@ -1557,6 +1557,11 @@
   .intro__btn {
     margin-top: 15px !important;
   }
+
+  .post__reviews-item {
+    padding: 20px 20px 20px !important;
+    max-width: 100% !important;
+  }
 }
 
 @media (max-width: 360px) {
@@ -1566,6 +1571,10 @@
   .post__transfer,
   .post__graph-box-text {
     width: 100% !important;
+  }
+
+  .header__logo img {
+    width: 85px !important;
   }
 }
 
